# bert4rec_repro

./: .gitignore  README.md  Systematic Review.xlsx  pyproject.toml
api/: action.py  user.py
aprec/api/: action.py  catalog.py  item.py  items_ranking_request.py  user.py
aprec/datasets/: beauty.py  bert4rec_datasets.py  dataset_stats.py  dataset_utils.py  datasets_register.py  download_file.py  gowalla.py  movielens100k.py  movielens20m.py
aprec/evaluation/: analyze_experiment_in_progress.py  analyze_results.py  evaluate_recommender.py  evaluation_utils.py  filter_cold_start.py  n_actions_for_user.py  run_experiment.py  run_n_experiments.sh  split_actions.py  statistical_signifficance_test.py  two_predictions_signficance_test.py
aprec/losses/: bce.py  bpr.py  climf.py  get_loss.py  lambda_gamma_rank.py  loss.py  loss_utils.py  mean_ypred_ploss.py  top1.py  xendcg.py
aprec/recommenders/: conditional_top_recommender.py  constant_recommender.py  deep_mf.py  featurizer.py  filter_seen_recommender.py  first_order_mc.py  item_item.py  lambdamart_ensemble_recommender.py  lightfm.py  matrix_factorization.py  mlp.py  mlp_historical.py  random_recommender.py  recommender.py  svd.py  (+3 more)
datasets/: beauty.py  booking.py  dataset_utils.py  datasets_register.py  movielens20m.py  movielens25m.py  mts_kion.py  netflix.py  yelp.py
evaluation/: analyze_results.py  bad_sample.py  evaluate_recommender.py  evaluation_utils.py  run_experiment.py  split_actions.py  two_predictions_signficance_test.py
losses/: bce.py  climf.py  get_loss.py  lambda_gamma_rank.py  loss.py  xendcg.py
recommenders/: deep_mf.py  featurizer.py  filter_seen_recommender.py  first_order_mc.py  item_item.py  kion_challenge_featurizer.py  lambdamart_ensemble_recommender.py  lightfm.py  matrix_factorization.py  random_recommender.py  top_recommender.py  transition_chain_recommender.py  vanilla_bert4rec.py
tests/: .gitignore  __init__.py  generate_actions.py  test_configs.py  test_constnat_recommender.py  test_dnn_sequential.py  test_item_item_recommender.py  test_keras_ndcg.py  test_kion_challenge_featurizer.py  test_mlp_historical.py  test_mlp_recommender.py  test_own_bert.py  test_recommender_evaluator.py  test_split_actions.py  test_top_recommender.py  test_vanilla_bert4rec.py  test_vanilla_sasrec.py
utils/: item_id.py  os_utils.py
(+194 files in other folders)
